# task-notify

./: Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  main.rs  monitor.rs
src/notifier/: mod.rs  smtp.rs
