[package]
name = "task-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
lettre = { version = "0.11", features = ["builder", "smtp-transport", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
toml = "0.8"
